// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test InputStar component InputStar component is created and rendered correctly when checked 1`] = `
Array [
  <input
    checked={false}
    className="rating__input"
    id="star-1"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={1}
  />,
  <label
    className="rating__label"
    htmlFor="star-1"
  >
    Rating 1
  </label>,
]
`;

exports[`Test InputStar component InputStar component is created and rendered correctly when non-cheked 1`] = `
Array [
  <input
    checked={true}
    className="rating__input"
    id="star-1"
    name="rating"
    onChange={[Function]}
    type="radio"
    value={1}
  />,
  <label
    className="rating__label"
    htmlFor="star-1"
  >
    Rating 1
  </label>,
]
`;
